--- a/final_project/package.json
+++ b/final_project/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bookshop",
   "version": "1.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "Practice-Project",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
